apps/bbbeauty/bbbeauty-dp.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: bb-beauty
  namespace: balhau-dev
  labels:
    version: armv6-0.0.3
    app: bb-beauty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bb-beauty
  template:
    metadata:
      labels:
        app: bb-beauty
    spec:
      containers:
      - name: bb-beauty
        image: 10.108.252.69:5000/balhau/bb-beauty:armv6-0.0.3
        ports:
        - containerPort: 8000
          name: registry
          protocol: TCP
